# pip_project

./: pyproject.toml  setup.py
comando/: main.py
pip_project/: main.py
