[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pip_project"
version = "0.1.0"
description = "Comando para generar proyectos ZTech"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
generator = "pip_project.main:main"
